--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+ 
+}
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: gray;
+}
+figure{
+  text-align: center;
+}
+#featured-property img{
+  width: 900px;
+}
+#featured-property p{
+ margin-right: 0px 1000px;
+ text-align: center;
+}
+#details p {
+  text-align: center;}
+ 
+#details div{
+  float: left ;
+  width: 25%;
+  background-color: red;
+  text-align: center;
+}
